--- a/my-frontend/src/app/globals.css
+++ b/my-frontend/src/app/globals.css
@@ -31,3 +31,29 @@ body {
     text-wrap: balance;
   }
 }
+
+.icon1 {
+  animation: spin 1s linear infinite;
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(deg);
+  }
+}
+}
+
+li > ul {
+  transform: translatex(100%) scale(0);
+}
+li:hover > ul {
+  transform: translatex(106%) scale(1);
+}
+li > button svg {
+  transform: rotate(-90deg);
+}
+li:hover > button svg {
+  transform: rotate(-270deg);
+}
