--- a/my-frontend/src/app/globals.css
+++ b/my-frontend/src/app/globals.css
@@ -50,10 +50,10 @@ body {
 }
 
 input[type=file]::file-selector-button {
-  margin-right: 20px;
+  margin-right: 10px;
   border: none;
-  background: #084cdf;
-  padding: 10px 20px;
+  background: #18AB8E;
+  padding: 7px 15px;
   border-radius: 10px;
   color: #fff;
   cursor: pointer;
@@ -61,7 +61,7 @@ input[type=file]::file-selector-button {
 }
 
 input[type=file]::file-selector-button:hover {
-  background: #0d45a5;
+  background: #005A48;
 }
 
 
